--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts_TW\ball_catch.cs" />
      <Compile Include="Assets\scripts_TW\Ball_move.cs" />
+     <Compile Include="Assets\scripts_TW\helper scripts\tagsmgm.cs" />
      <Compile Include="Assets\supergoalkeeper\game_core\plugins\FSMSystem.cs" />
      <Compile Include="Assets\supergoalkeeper\game_core\scripts\achievementSystem\achievement.cs" />
      <Compile Include="Assets\supergoalkeeper\game_core\scripts\achievementSystem\actionBehaviour.cs" />
